--- a/GitHub/style.css
+++ b/GitHub/style.css
@@ -14,12 +14,25 @@
 header {
     display: flex;
     justify-content:space-between ;
-    background-color:#7c5e99;
+    align-items: center;
+    background-color:#0077b6;
     border-bottom:10px solid #000;
     padding:10px 20px;
     
    
 }
+
+h2 {
+    font-family: 'Press Start 2P', sans-serif;
+    color: #fff;
+    text-shadow: 5px 5px 0px #000;
+    
+}
+
+nav {
+    text-align: right;
+}
+
 
 a {
     display:inline-flex;
@@ -57,6 +70,20 @@ span {
     padding: 18px 20px ;
     border-radius: 10px;
     margin-right: 0;
+    transition: transform 100ms linear;
     
 }
+
+#button:hover {
+    transform: scale(1.08);
+}
+
+h1 {
+        font-family: 'Press Start 2P', sans-serif;
+        font-size: 30px;
+        color: #0077b6;
+        text-shadow: 4px 4px 0px #000;
+        
+}
+
 
